--- a/requirements.txt
+++ b/requirements.txt
@@ -19,12 +19,12 @@ Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
-Nuitka==2.7.3
 oauthlib==3.2.2
 ordered-set==4.1.0
 packaging==25.0
 pefile==2023.2.7
 Pygments==2.19.1
+pyinstaller==6.13.0
 pyinstaller-hooks-contrib==2025.4
 pypng==0.20220715.0
 python-dateutil==2.9.0.post0
